UMLObject::set{Name,Visibility}: Make virtual. UMLAttribute::attributeChanged(): New signal. UMLAttribute::set{Name,Visibility}: New.  Reimplement methods from UMLObject  in order to emit extra signal attributeChanged(). AssociationWidget::slotAttributeChanged(): New slot. Connects to UMLAttribute::  attributeChanged() when the AssociationWidget represents an UMLAttribute.

The extra signal is necessary because the attribute name must already have
been updated at the AssociationWidget by the time UMLObject::emitModified()
is called else UMLView::createAutoAttributeAssociations() will think it needs
to create a new attribute association.

BUG:147919

svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=688793