umbrello/associationwidget.h
@@ -1030,6 +1030,14 @@ public slots:
     void slotAttributeRemoved(UMLClassifierListItem* obj);
 
     /**
+     * Connected to UMLObject::modified() in case this
+     * AssociationWidget is linked to a classifer's attribute type.
+     *
+     * @param obj               The UMLAttribute removed.
+     */
+    void slotAttributeChanged();
+
+    /**
      * Synchronize this widget from the UMLAssociation.
      */
     void syncToModel();
